--- a/home/wiki/Android/Setup.html
+++ b/home/wiki/Android/Setup.html
@@ -57,7 +57,7 @@
     </p>
     <ul>
       <li>
-        (Android) Open Google Play and search for "XOWA"
+        (Android) Open Google Play and search for "xowa"
       </li>
       <li>
         (Browser) Go to <a href="https://play.google.com/store/apps/details?id=org.xowa" rel="nofollow" class="external free">https://play.google.com/store/apps/details?id=org.xowa</a> and press Install
@@ -111,23 +111,23 @@
     </dl>
     <ul>
       <li>
-        Move the files to your microSD card. Assuming your microSD card is attached as the X drive, you will have files like these:
+        Move the files to your microSD card with a folder structure of <code>\Android\data\org.xowa\</code><sup id="cite_ref-android_path_0-0" class="reference"><a href="#cite_note-android_path-0">[1]</a></sup>. Assuming your microSD card is attached as the X drive, you will have files like these:
       </li>
     </ul>
     <dl>
       <dd>
         <dl>
           <dd>
-            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa
+            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa
           </dd>
           <dd>
-            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa
+            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa
           </dd>
           <dd>
-            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
+            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
           </dd>
           <dd>
-            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
+            X:\Android\data\org.xowa\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
           </dd>
         </dl>
       </dd>
@@ -180,10 +180,10 @@
         Launch XOWA on your Android device
       </li>
       <li>
-        Press the <code>menu button</code> in the top left-hand corner
+        Press the <code>menu</code> button in the top left-hand corner
       </li>
       <li>
-        Press the <code>XOWA</code> item
+        Press the <code>XOWA</code> button
       </li>
       <li>
         Press the <code>blue plus</code> image in the top right-hand corner of the grid
@@ -277,13 +277,13 @@
             html.file stubs
           </li>
           <li>
-            file.core
+            images.core
           </li>
         </ul>
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Android_wikis_">Android wikis <sup id="cite_ref-more_wikis_0-0" class="reference"><a href="#cite_note-more_wikis-0">[1]</a></sup></span>
+      <span class="mw-headline" id="Android_wikis_">Android wikis <sup id="cite_ref-more_wikis_1-0" class="reference"><a href="#cite_note-more_wikis-1">[2]</a></sup></span>
     </h2>
     <table class='wikitable sortable'>
       <tr>
@@ -422,10 +422,107 @@
           </p>
         </td>
       </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://de.wikipedia.org" rel="nofollow" class="external free">https://de.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-04-07
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-04-21
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            39
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-04-07_core.7z" rel="nofollow" class="external text">core</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-04-07_html.7z" rel="nofollow" class="external text">html</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_core.7z" rel="nofollow" class="external text">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-1.7z" rel="nofollow" class="external text">images.main articles.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-2.7z" rel="nofollow" class="external text">images.main articles.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-3.7z" rel="nofollow" class="external text">images.main articles.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-4.7z" rel="nofollow" class="external text">images.main articles.part-4</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-100.7z" rel="nofollow" class="external text">images.other articles</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-04-07_file_update.7z" rel="nofollow" class="external text">images.update: 2016-04</a><br>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://de.wiktionary.org" rel="nofollow" class="external free">https://de.wiktionary.org</a><br>
+            <a href="https://de.wikisource.org" rel="nofollow" class="external free">https://de.wikisource.org</a><br>
+            <a href="https://de.wikivoyage.org" rel="nofollow" class="external free">https://de.wikivoyage.org</a><br>
+            <a href="https://de.wikiquote.org" rel="nofollow" class="external free">https://de.wikiquote.org</a><br>
+            <a href="https://de.wikibooks.org" rel="nofollow" class="external free">https://de.wikibooks.org</a><br>
+            <a href="https://de.wikiversity.org" rel="nofollow" class="external free">https://de.wikiversity.org</a><br>
+            <a href="https://de.wikinews.org" rel="nofollow" class="external free">https://de.wikinews.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-04-07
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-04-21
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            4.9
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_debundle_2016-04-07.7z" rel="nofollow" class="external text">wikis and images</a><br>
+          </p>
+        </td>
+      </tr>
     </table>
     <ol class="references">
-      <li id="cite_note-more_wikis-0">
-        <span class="mw-cite-backlink"><a href="#cite_ref-more_wikis_0-0">^</a></span> <span class="reference-text">More wikis will be generated over the coming months. If you want a specific wiki, please make a request at <a href="https://github.com/gnosygnu/xowa/issues" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues</a></span>
+      <li id="cite_note-android_path-0">
+        <span class="mw-cite-backlink"><a href="#cite_ref-android_path_0-0">^</a></span> 
+        <ul>
+          <li>
+            <span class="reference-text">The <code>\Android\data\org.xowa\</code> folder is strongly recommended.</span>
+            <ul>
+              <li>
+                <span class="reference-text">Android Kit-Kat devices can only write to an external folder with this hierarchy: <code>\Android\data\org.xowa\</code></span>
+              </li>
+              <li>
+                <span class="reference-text">XOWA Android currently does not write to any databases, but it will in the coming months. I'm working on an auto-update "merge" facility which will split a wiki into pieces and merge them together. The merging will require write permissions.</span>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span class="reference-text">If you only want to have read-only access, you can use any other path. For example, X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa .</span>
+          </li>
+        </ul>
+      </li>
+      <li id="cite_note-more_wikis-1">
+        <span class="mw-cite-backlink"><a href="#cite_ref-more_wikis_1-0">^</a></span> <span class="reference-text">More wikis will be generated over the coming months. If you want a specific wiki, please make a request at <a href="https://github.com/gnosygnu/xowa/issues" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues</a></span>
       </li>
     </ol>
   
