--- a/home/wiki/Dashboard/Image_databases.html
+++ b/home/wiki/Dashboard/Image_databases.html
@@ -531,12 +531,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-09-01
+            2016-04-07
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-09-05
+            2016-04-21
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -551,13 +551,16 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_text.7z" rel="nofollow" class="external text">wiki</a><br>
+            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-04-07_core.7z" rel="nofollow" class="external text">core</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-04-07_text.7z" rel="nofollow" class="external text">text</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-04-07_html.7z" rel="nofollow" class="external text">html</a><br>
              <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_core.7z" rel="nofollow" class="external text">images.core</a><br>
              <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-1.7z" rel="nofollow" class="external text">images.main articles.part-1</a><br>
              <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-2.7z" rel="nofollow" class="external text">images.main articles.part-2</a><br>
              <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-3.7z" rel="nofollow" class="external text">images.main articles.part-3</a><br>
              <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-4.7z" rel="nofollow" class="external text">images.main articles.part-4</a><br>
              <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-100.7z" rel="nofollow" class="external text">images.other articles</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-04-07_file_update.7z" rel="nofollow" class="external text">images.update: 2016-04</a><br>
           </p>
         </td>
       </tr>
@@ -575,18 +578,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-09-01<br>
-            2015-09-01<br>
-            2015-09-01<br>
-            2015-09-01<br>
-            2015-09-01<br>
-            2015-09-01<br>
-            2015-09-01
+            2016-04-07
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-09-05
+            2016-04-21
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -601,7 +598,7 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_debundle_2015-08-07.7z" rel="nofollow" class="external text">wikis and images</a><br>
+            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_debundle_2016-04-07.7z" rel="nofollow" class="external text">wikis and images</a><br>
           </p>
         </td>
       </tr>
