--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -95,7 +95,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/LuaCommon.html" id="xolnki_18" title="Diagnostics/Scribunto/LuaCommon">Diagnostics/Scribunto/LuaCommon</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/UstringLibrary.html" id="xolnki_19" title="Diagnostics/Scribunto/UstringLibrary">Diagnostics/Scribunto/UstringLibrary</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/UstringLibrary.html" id="xolnki_19" title="Diagnostics/Scribunto/UstringLibrary" class="xowa-visited">Diagnostics/Scribunto/UstringLibrary</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/UriLibrary.html" id="xolnki_20" title="Diagnostics/Scribunto/UriLibrary">Diagnostics/Scribunto/UriLibrary</a>
