--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,20 +82,17 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.4.3.1 features the following:
+      v3.4.4.1 features the following:
     </p>
     <ul>
       <li>
-        (Android) XOWA Android app on Play Store
+        (Android) Fix for missing file-user.xowa database
       </li>
       <li>
-        (Android) Kit-Kat support for Android app
+        (Package) Update German wikis (2016-04): <a href="https://archive.org/details/Xowa_dewiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_dewiki_latest</a>
       </li>
       <li>
-        (Desktop) Minor parser changes and fixes, including missing random sub-pages in Portal, missing Wikis sidebar in home wiki and no {{DisplayTitle}}
-      </li>
-      <li>
-        (Desktop) New <a href="http://xowa.org" rel="nofollow" class="external free">http://xowa.org</a> domain with entire home wiki
+        (Desktop) Minor parser changes and fixes, including using non-ASCII strings for gsub find
       </li>
     </ul>
     <p>
