--- a/home/wiki/Options/Config_script.html
+++ b/home/wiki/Options/Config_script.html
@@ -302,6 +302,7 @@ li.active a, li.active a:hover
             </td>
             <td>
 <textarea xowa_prop="app.user.cfg.startup.custom_config" class="options_textarea" style="width: 600px; height: 500px;" accesskey=',' id='xowa_prop_0'>
+xowa.api.html.page.view_html_generates_hdump = 'n';
 </textarea>
             </td>
           </tr>
