--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-04-24</b> German wikis updated<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German wikis</a>
+    </li>
+  </ul>
+
   <b>2016-04-16</b> XOWA app released on Google Play<br/>
   <ul>
     <li> <a href="https://play.google.com/store/apps/details?id=org.xowa" class="external text" rel="nofollow">XOWA Android app</a>
@@ -134,102 +140,6 @@
   <b>2016-01-17</b> Android app beta released<br/>
   <ul>
     <li> <a href="https://github.com/gnosygnu/xowa/issues/36" class="external text" rel="nofollow">Android app instructions</a>
-    </li>
-  </ul>
-
-  <b>2015-12-27</b> Russian wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_ruwiki_latest" class="external text" rel="nofollow">Russian wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-12-20</b> Englis Wikipedia 2015-12 updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2015-12-13</b> Arabic wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_arwiki_latest" class="external text" rel="nofollow">Arabic wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-12-07</b> Italian wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_itwiki_latest" class="external text" rel="nofollow">Italian wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-11-29</b> Dutch and Latin wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">Dutch wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_lawiki_latest" class="external text" rel="nofollow">Latin wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-11-22</b> French, Lithuanian, Limburgish, Estonian, Latvian, Nynorsk, and Cebuano wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_ltwiki_latest" class="external text" rel="nofollow">Lithuanian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_liwiki_latest" class="external text" rel="nofollow">Limburgish wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_etwiki_latest" class="external text" rel="nofollow">Estonian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_lvwiki_latest" class="external text" rel="nofollow">Latvian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_nnwiki_latest" class="external text" rel="nofollow">Nynorsk wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_cebwiki_latest" class="external text" rel="nofollow">Cebuano wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-11-15</b> Slovak, Slovenian, Galician and Waray-Waray wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_slwiki_latest" class="external text" rel="nofollow">Slovak wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_skwiki_latest" class="external text" rel="nofollow">Slovenian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_glwiki_latest" class="external text" rel="nofollow">Galician wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_warwiki_latest" class="external text" rel="nofollow">Waray-Waray wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-11-08</b> Danish, Croatian, Serbo-Croatian and Estonian wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_dawiki_latest" class="external text" rel="nofollow">Danish wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_shwiki_latest" class="external text" rel="nofollow">Serbo-Croatian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_hrwiki_latest" class="external text" rel="nofollow">Croatian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_eswiki_latest" class="external text" rel="nofollow">Estonian wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-11-02</b> English Wikipedia, Hebrew, Norwegian and Vietnamese wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_hewiki_latest" class="external text" rel="nofollow">Hewbrew wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_nowiki_latest" class="external text" rel="nofollow">Norwegian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_viwiki_latest" class="external text" rel="nofollow">Vietnamese wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-10-18</b> Serbian, Bulgarian and Malay wiki updates released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_srwiki_latest" class="external text" rel="nofollow">Serbian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_mswiki_latest" class="external text" rel="nofollow">Malay wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_bgwiki_latest" class="external text" rel="nofollow">Bulgarian wikis</a>
     </li>
   </ul>
 </td>
