--- a/home/wiki/Change_log/v3.4.4.1.html
+++ b/home/wiki/Change_log/v3.4.4.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Help/Download XOWA - XOWA</title>
+  <title>Change log/v3.4.4.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,83 +11,12 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Help/Download XOWA</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.4.4.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <p>
-      All files are available at <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
-    </p>
-    <p>
-      For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog" class="xowa-visited">Blog</a>
-    </p>
-    <h2>
-      <span class="mw-headline" id="Windows">Windows</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_windows_64_v3.4.4.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_windows_v3.4.4.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Linux">Linux</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_linux_64_v3.4.4.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_linux_v3.4.4.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Mac_OS_X">Mac OS X</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_macosx_64_v3.4.4.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_macosx_v3.4.4.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Raspberry_Pi">Raspberry Pi</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_arm_v3.4.4.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Android">Android</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.4.1/xowa_app_android_v3.4.4.1.apk" rel="nofollow" class="external text">Android</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Desktop.29">Source code (Desktop)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.4.4.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Android.29">Source code (Android)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
-      </li>
-    </ul>
     <h2>
       <span class="mw-headline" id="v3.4.4.1_.282016-04-24.29">v3.4.4.1 (2016-04-24)</span>
     </h2>
@@ -204,7 +133,7 @@
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="Android_2">Android</span>
+      <span class="mw-headline" id="Android">Android</span>
     </h3>
     <p>
       <b>major.fix</b>
